--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection configuration
-spring.datasource.url=jdbc:mysql://root:LRWdPQWdSHZhUIoqOTsiwvWeyhIMmYNt@shinkansen.proxy.rlwy.net:15504/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:15504/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=LRWdPQWdSHZhUIoqOTsiwvWeyhIMmYNt
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate (JPA) configuration
