--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection configuration
-DB on Server Railway
+#DB on Server Railway
 spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:15504/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=LRWdPQWdSHZhUIoqOTsiwvWeyhIMmYNt
